# arc-lang

./: README.md  Spec.md  Token.md  arc-ast.puml
arc/: Cargo.toml  run_tests.sh
arc-lang/: CHANGELOG.md  README.md  package.json
arc-lang/syntaxes/: arc.tmLanguage.json
arc/src/: TODO.md  ast_classes.rs  doc.pest  grammar.pest  lexer.rs  main.rs  pair_to_tree.rs  parser.rs  semantic_analysis.rs  token.rs  tree_to_wasm.rs  tree_to_wat.rs  type_system.rs
arc/testcases/: List.arc  add.arc  add.rs  all.arc  arithmetic.arc  basic_types.arc  bye_world.arc  caesar.arc  closures.arc  data_structures.arc  discussion.arc  error_handling.arc  flow_control.arc  hello_world.arc  import.arc  modules.arc  mutability.arc  notARC.arc  operators.arc  sample_programs.arc  sei.arc  sort.arc
arc/testcases/wat/: arithmetic.wat  caesar.wat  sort.wat
question/: README.md  arthimetic-test.js  caesar-test.js  sort-test.js  test.sh
question/wasm/: add.wasm  arithmetic.wasm
