[package]
name = "arc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.8"
pest_derive = "2.7.8"
wasm-encoder = "0.205.0"

# ADDED BY MITHIL JUST FOR FUN!!! TO BE REMOVED.

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "arcc"
path = "src/main.rs"

[package.metadata.'cargo-make']
aliases = { "run" = "arcc" }
